<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chatScreenBackground"
    tools:context=".chatActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/headerBackground"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.6">

            <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:elevation="10dp"
                android:id="@+id/back"
                app:cardBackgroundColor="@color/iconBackground"
                android:clickable="true"
                android:focusable="true"
                android:theme="@style/ClickableViewCircle"
                app:cardCornerRadius="40dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/back" />


            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:cropToPadding="true"
                android:src="@drawable/demopic"
                app:civ_border_color="@color/realBlack"
                android:id="@+id/chat_profilePic"
                app:civ_border_width="3dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2.1">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/kathy_gomez"
                android:textSize="16sp"
                android:fontFamily="sans-serif-medium"
                android:layout_marginTop="2dp"
                android:maxLines="1"
                android:id="@+id/name_chat"
                android:ellipsize="end" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#DDDDDD"
                android:text="@string/status"
                android:textSize="12sp"
                android:layout_marginTop="2dp"
                android:fontFamily="sans-serif-black" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_gravity="center"
            android:layout_weight="0.6">

            <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:elevation="10dp"
                app:cardBackgroundColor="@color/iconBackground"
                android:clickable="true"
                android:focusable="true"
                android:theme="@style/ClickableViewCircle"
                app:cardCornerRadius="40dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/call" />


            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messages"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:paddingBottom="70dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:layout_marginBottom="20dp"
        android:weightSum="2"
        android:layout_alignParentBottom="true">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            app:cardBackgroundColor="@color/receiveMessageColor"
            app:cardCornerRadius="25dp"
            android:elevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="10dp"
                android:paddingHorizontal="10dp"
                android:weightSum="4">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.4"
                    android:clickable="true"
                    android:focusable="true"
                    android:theme="@style/ClickableView"
                    android:src="@drawable/smile" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="2.7"
                    android:hint="@string/type_a_message"
                    android:textColorHint="#B3B3B3"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:id="@+id/messageType"
                    android:background="@null" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:theme="@style/ClickableView"
                    android:layout_weight="0.4"
                    android:src="@drawable/paperclip" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_weight="0.4"
                    android:clickable="true"
                    android:focusable="true"
                    android:theme="@style/ClickableView"
                    android:src="@drawable/camera" />



            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="end"
            android:layout_weight="0.3">

            <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:elevation="10dp"
                app:cardBackgroundColor="@color/sendMessageColor"
                android:clickable="true"
                android:focusable="true"
                android:theme="@style/ClickableViewCircle"
                app:cardCornerRadius="40dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:id="@+id/send"
                    android:layout_gravity="center"
                    android:src="@drawable/mke" />


            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>